<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Alarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Status</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">About</string>
    <string name="rate">Rate</string>
    <string name="about">Rebord yours old smatphone as real GPS Car Alarm system! Car Alarm is the best way to protect yours car, but not only! Pick up yours old smartphone insert into yours car et voilà! Activate and deactivate it via bluetooth.</string>
    <string name="testAlarm">Car Alarm in Test Mode</string>
    <string name="activateAlarm">Car Alarm Activated</string>
    <string name="deactivateAlarm">Car Alarm Deactivated</string>
    <string name="deletelog">Delete All Log?</string>
    <string name="wait">Please Wait...</string>
    <string name="star_caralarm">Start at Boot</string>
    <string name="star_caralarm_desc">If checked Car Alarm will be started at boot up of yours smartphone, it\'s suggested.</string>
    <string name="use_gps">Use GPS</string>
    <string name="use_gps_desc">If checked Car Alarm use the GPS for relevating position and send it if alarm ring.</string>
    <string name="use_accel">Use Accelerometer</string>
    <string name="use_accel_desc">If checked Car Alarm use accelerometer to detect shock or movements.</string>
    <string name="use_sms">Send SMS</string>
    <string name="use_sms_desc">If checked Car Alarm send SMS is activated by GPS position or Accelerometer alert.</string>
    <string name="use_bluetooth">Use Bluetooth</string>
    <string name="use_bluetooth_desc">If checked is possible to activate/deactivate and test Car Alarm via remote bluetooth.</string>
    <string name="start_stop">Click here to start or stop the service.</string>
    <string name="mail_support">glmlabs2011@gmail.com</string>
    <string name="use_call_desc">Check this if you want to make call on Alarm atcivated.</string>
    <string name="use_call">Make Call</string>
    <string name="sms">SMS Text</string>
    <string name="phone1">Second Phone</string>
    <string name="phone">Phone</string>
    <string name="use_sms_remote_control">Use SMS to Activate/Deactivate Alarm: type \'activate\' to Activate Alarm or type \'deactivate\' to De-Activate Alarm</string>
    <string name="sms_remote_control">Sms Control</string>
</resources>
