<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/title_section2" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_section3" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_section4" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@android:drawable/ic_menu_set_as"
                android:title="Rate" />
            <item
                android:id="@+id/nav_support"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="Mail Support" />
        </menu>
    </item>

</menu>
