<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_top">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chkService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/star_caralarm"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    android:checked="false" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/star_caralarm_desc"
                    android:id="@+id/textView5"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/background_dark"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/linearLayout2" />

                <CheckBox
                    android:id="@+id/chkGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_gps"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    android:checked="false" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/use_gps_desc"
                    android:id="@+id/textView"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/background_dark"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />

                <CheckBox
                    android:id="@+id/chkAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_accel"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginTop="20dp"
                    android:checked="false" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/use_accel_desc"
                    android:id="@+id/textView2"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/background_dark"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/chkSMS"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_sms"
                        android:textColor="@android:color/background_dark"
                        android:layout_gravity="center_vertical"
                        android:checked="false"
                        android:layout_marginTop="20dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnPhone"
                        android:layout_gravity="right|center_vertical"
                        android:src="@android:drawable/ic_menu_manage"
                        android:layout_alignBottom="@+id/chkSMS"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/use_sms_desc"
                        android:id="@+id/textView3"
                        android:layout_gravity="left|center_vertical"
                        android:layout_below="@+id/chkSMS"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:textColor="@android:color/background_dark"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/chkCall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_call"
                        android:textColor="@android:color/background_dark"
                        android:layout_gravity="center_vertical"
                        android:checked="false"
                        android:layout_marginTop="20dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCallPhone"
                        android:layout_gravity="right|center_vertical"
                        android:src="@android:drawable/ic_menu_manage"
                        android:layout_alignBottom="@+id/chkCall"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/use_call_desc"
                        android:layout_gravity="left|center_vertical"
                        android:layout_below="@+id/chkCall"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:textColor="@android:color/background_dark"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/chkSMSRemoteControl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sms_remote_control"
                        android:textColor="@android:color/background_dark"
                        android:layout_gravity="center_vertical"
                        android:checked="false"
                        android:layout_marginTop="20dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSMSRemoteControl"
                        android:layout_gravity="right|center_vertical"
                        android:src="@android:drawable/ic_menu_manage"
                        android:layout_alignBottom="@+id/chkSMSRemoteControl"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/use_sms_remote_control"
                        android:layout_gravity="left|center_vertical"
                        android:layout_below="@+id/chkSMSRemoteControl"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:textColor="@android:color/background_dark"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="10dp" />

                <CheckBox
                    android:id="@+id/chkBluetooth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_bluetooth"
                    android:textColor="@android:color/background_dark"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/use_bluetooth_desc"
                    android:id="@+id/textView4"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/background_dark"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="10dp"
                    android:id="@+id/linearLayout" >

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="New ToggleButton"
                        android:id="@+id/toggleButton" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativeLayout"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/start_stop"
                        android:id="@+id/textView7"
                        android:layout_gravity="left|center_vertical"
                        android:layout_alignParentBottom="true"
                        android:layout_toLeftOf="@+id/tglBtnStartStop"
                        android:layout_alignParentLeft="true"
                        android:textColor="@android:color/background_dark"/>

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Stop/Start"
                        android:id="@+id/tglBtnStartStop"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:checked="true" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</FrameLayout>