<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/mainlayout">


<TextView
    android:id="@+id/txtPhone1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@android:color/background_dark"
    android:layout_alignParentLeft="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editPhone1"
        android:layout_below="@+id/txtPhone1"
        android:layout_alignLeft="@+id/txtPhone1"
        android:layout_alignRight="@+id/editSMS" />

    <TextView
        android:id="@+id/txtPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/editPhone1"
        android:layout_alignLeft="@+id/editPhone1"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editPhone2"
        android:layout_below="@+id/txtPhone2"
        android:layout_alignLeft="@+id/txtPhone2"
        android:layout_alignRight="@+id/editPhone1" />

    <TextView
        android:id="@+id/txtSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/editPhone2"
        android:layout_alignLeft="@+id/editPhone2"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editSMS"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textColor="@android:color/background_dark"
        android:layout_alignLeft="@+id/txtPhone1"
        android:layout_below="@+id/txtSMS"
        android:layout_above="@+id/btnOK" />


</LinearLayout>